@@ -155,3 +155,182 @@ country_event = {
 ############################################
 #Sultanate Min Omar Events
 ############################################
+
+#Appoint new Muqti in area
+country_event = {
+	id = damietta_rahulids.3
+	title = damietta_rahulids.3.t
+	desc = damietta_rahulids.3.desc
+	picture = muslim_ADVISOR_eventPicture
+
+	trigger = {
+		tag = RHL
+		has_government_attribute = damietta_rahulid_sultanate_nobility
+	}
+
+	is_triggered_only = yes #pulse
+
+	immediate = {
+		hidden_effect = {
+			random_owned_province = {
+				if = {
+					limit = {
+						NOT = {
+							any_province_in_state = {
+								has_province_flag = damietta_rhl_mufti_home
+							}
+						}
+					}
+					set_province_flag = damietta_rhl_mufti_home
+					set_variable = {
+						which = damietta_rhl_mufti_power_in_area
+						value = 0
+					}
+					save_event_target_as = damietta_event_rhl_3_target
+				}
+				else = {
+					random_province_in_state = {
+						limit = {
+							has_province_flag = damietta_rhl_mufti_home
+						}
+						save_event_target_as = damietta_event_rhl_3_target
+					}
+				}
+			}
+		}
+	}
+
+	after = {
+		event_target:damietta_event_rhl_3_target = {
+			if = {
+				limit = {
+					check_variable = {
+						which = damietta_rhl_mufti_power_in_area
+						value = 10
+					}
+				}
+				spawn_rebels = {
+					size = 3
+					type = noble_rebels
+				}
+				remove_province_modifier = damietta_rhl_appointed_relative_mufti
+			}
+		}
+	}
+
+	#Appoint a relative of the old Muqti.
+	option = {
+		name = damietta_rahulids.3.a
+		ai_chance = {
+			factor = 60
+			modifier = {
+				factor = 0.2
+				event_target:damietta_event_rhl_3_target = {
+					check_variable = {
+						which = damietta_rhl_mufti_power_in_area
+						value = 6
+					}
+				}
+			}
+		}
+		event_target:damietta_event_rhl_3_target = {
+			change_variable = {
+				which = damietta_rhl_mufti_power_in_area
+				value = 2
+			}
+			area = {
+				add_province_modifier = {
+					name = damietta_rhl_appointed_relative_mufti
+					duration = 1825
+				}				
+			}
+		}
+	}
+
+	#Appoint someone who will support our plans.
+	option = {
+		name = damietta_rahulids.3.b
+		ai_chance = {
+			factor = 30
+			modifier = {
+				factor = 4
+				event_target:damietta_event_rhl_3_target = {
+					check_variable = {
+						which = damietta_rhl_mufti_power_in_area
+						value = 6
+					}
+				}
+			}
+		}
+		event_target:damietta_event_rhl_3_target = {
+			subtract_variable = {
+				which = damietta_rhl_mufti_power_in_area
+				value = 1
+			}
+			area = {
+				add_province_modifier = {
+					name = damietta_rhl_loyal_mufti
+					duration = 1825
+				}				
+			}
+		}
+	}
+
+	#Appoint a noble from another Iqta'.
+	option = {
+		name = damietta_rahulids.3.c
+		ai_chance = {
+			factor = 10
+		}
+		event_target:damietta_event_rhl_3_target = {
+			change_variable = {
+				which = damietta_rhl_mufti_power_in_area
+				value = 1
+			}
+			area = {
+				add_province_modifier = {
+					name = damietta_rhl_foreign_mufti
+					duration = 1825
+				}
+			}
+		}
+	}
+}
+
+#Rahulid setup event for iqta
+country_event = {
+	id = damietta_rahulids.4
+
+	hidden = yes
+
+	trigger = {
+		tag = RHL
+		has_government_attribute = damietta_rahulid_sultanate_nobility
+	}
+
+	immediate = {		
+		random_owned_area = {
+			limit = {
+				NOT = {
+					any_province_in_state = {
+						has_province_flag = damietta_rhl_mufti_home
+					}
+				}
+			}
+			random_province_in_state = {
+				set_province_flag = damietta_rhl_mufti_home
+				set_variable = {
+					which = damietta_rhl_mufti_power_in_area
+					value = 0
+				}
+			}
+		}
+	}
+
+	option = {
+		name = damietta_rahulids.4.a
+		ai_chance = {
+			factor = 100
+		}
+	}
+}
