@@ -1,3 +1,5 @@
 ﻿l_english:
  #Damietta
- string_start_dmi:0 "The Fifth Crusade, waged from 1217 to 1220, sought to retake the Holy Land through striking at the belly of the Ayyubid beast - Egypt. Fighting against an Ayyubid sultanate suddenly plunged into civil war following the death of Sultan Al-Kamil, the combined Crusader forces, lead by King Regent of Jerusalem John of Brienne and Grandmaster Piere de Montagut of the Knights Templar, the Crusaders captured the port city of Damietta in 1219 before pushing to Cairo, Jerusalem and finally Damascus. The County of Tamiathis was established in 1220, the crown jewel of the Eastern Mediterranean.\n\nOver two hundred years later, the Fortress of Tamiathis still stands, battered and weary from civil wars, internal discord, and numerous failed invasions by the Rahulid Sultanate to the south. The County's conversion efforts towards the native Coptic and Muslim populations have proved disastrous. Damiettan knights and footmen patrol the streets of cities like Rosetta, Alessandrie, and Sagsic, keeping the peace through whatever means necessary. A rich Latin elite rule safely from the west bank of the Nile, across the river from the city of Damiette proper, oblivious to the hostility the populace feels towards them.\n\nDivided culturally and religiously, Damietta's position and outlook are precarious. Through clever diplomacy and pragmatic administration, perhaps the Delta can see peace once more."
+ string_start_dmi:0 "The §YFifth Crusade§!, waged from 1217 to 1220, sought to retake the Holy Land through striking at the belly of the §YAyyubid§! beast - Egypt. Fighting against an Ayyubid sultanate suddenly plunged into civil war following the death of Sultan §YAl-Kamil§!, the combined Crusader forces, lead by King Regent of Jerusalem §YJohn of Brienne§! and Grandmaster Piere de Montagut of the Knights Templar, the Crusaders captured the port city of §YDamietta§! in 1219 before pushing to Cairo, Jerusalem and finally Damascus. The County of Tamiathis was established in 1220, the crown jewel of the Eastern Mediterranean.\n\nOver two hundred years later, the §YFortress of Tamiathis§! still stands, battered and weary from civil wars, internal discord, and numerous failed invasions by the §YRahulid Sultanate§! to the south. The County's conversion efforts towards the native Coptic and Muslim populations have proved disastrous. Damiettan knights and footmen patrol the streets of cities like Rosetta, Alessandrie, and Sagsic, keeping the peace through whatever means necessary. A rich Latin elite rule safely from the west bank of the Nile, across the river from the city of Damiette proper, oblivious to the hostility the populace feels towards them.\n\nDivided culturally and religiously, Damietta's position and outlook are precarious. Through clever diplomacy and pragmatic administration, perhaps the Delta can see peace once more."
+ #Rahulids
+ string_start_rhl:0 "The §YRahulid Sultanate§! owes its name to the first Sultan, an Ayyubid emir named §YOmar Rahul§!. Rahul capitalized on the Ayyubids' weakness and neglect of Egypt following the Fifth Crusade and orchestrated a peaceful coup for Egypt in §Y1248§!, to which the Ayyubid Sultan Al-Ashraf Musa, plagued by strife in Syria and old age, did not react. Omar Rahul had captured the Breakbasket of the Mediterranean without shedding a single drop of blood.\n\nOr, at least, he seized Egypt south of the Nile Delta. To the north lied the §YCounty of Tamiathis§!, established by Crusaders in 1220, which served (and still serves) as a significant obstacle to Egyptian prosperity. By 1444, the Damiettans and Rahulids have engaged in countless wars with little territorial change to show for it. If the Rahulid Sultanate is to establish itself as the true rulers of all Egypt, they must crush the Crusader stronghold of the Nile Delta.\n\nNot that the Sultanate doesn't have problems internally. After the sudden conversion of Sultan Mohammed \"the Lunatic\" from the Sunni tradition to the Shia tradition in 1387, the Sultanate's religious makeup has been an absolute mess. Copts, Sunnis, and Shiites all call the Sultanate home, and religious rebellion is common. Sultan Uthman has taken a laissez-faire approach to religious practice in his reign, but after him, the future is uncertain.\n\nOne other thorn in the collective side of the Sultanate is the §YBerbers§! in the Western Desert and the §YNubians§! in the south. To tame the desert would take considerable monetary expenditure, but would certainly make the Sultanate a safer place. The Nubians are less of a disturbance and more of an annoyance; the seizure of their land would provide another market for Egyptian goods and would stifle the Coptic faith's aspirations of a Coptic Egypt."
